postgresql create table , insert data

--- a/week-10/postgres/package.json
+++ b/week-10/postgres/package.json
@@ -8,5 +8,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@types/pg": "^8.11.10",
+    "pg": "^8.13.0"
+  }
 }
