--- a/week-10/postgres/package.json
+++ b/week-10/postgres/package.json
@@ -8,9 +8,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "@types/pg": "^8.11.10",
     "pg": "^8.13.0"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
