--- a/week-13/medium/backend/package.json
+++ b/week-13/medium/backend/package.json
@@ -5,6 +5,7 @@
     "deploy": "wrangler deploy --minify"
   },
   "dependencies": {
+    "@amitesh25/medium-common": "^1.0.0",
     "@prisma/client": "^6.0.1",
     "@prisma/extension-accelerate": "^1.2.1",
     "hono": "^4.6.14",
