--- a/week-13/medium/frontend/package.json
+++ b/week-13/medium/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@amitesh25/medium-common": "^1.0.2",
+    "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1"
